Fix layout problems on iPad and other devices for the single page text view, translation element now has a fixed width on larger devices

--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,17 @@ code {
 /* ::slection {
   appearance: none;
 } */
+
+/* iframe {
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch; */
+/* } */
+
+/* iframe html {
+  -webkit-transform:translate3d(0,0,0);
+  overflow-x: hidden;
+}
+
+iframe > html {
+  width: 300px;
+} */
